--- a/help.html
+++ b/help.html
@@ -20,7 +20,7 @@
 			</div>
 			
 			<div id="menu" class="menu">
-				<a href="/" class="item">
+				<a href="index.html" class="item">
 					<i class="iconfont icon-zhuye"></i>
 					<span>主页</span>
 				</a>
