--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 		</header>
 		<section class="topnav">
-			<a href="/" class="current">首页</a>
+			<a href="index.html" class="current">首页</a>
 			<a href="###">我要投资</a>
 			<a href="###">账户中心</a>
 		</section>
