--- a/detail.html
+++ b/detail.html
@@ -61,18 +61,17 @@
 						<div class="pro-block">60%</div>
 					</div>
 				</div>
+				<div class="monty">
+					<p>已投资<span>37</span>人&gt;&gt;</p>
+					<p>剩余可投<span>630000</span></p>
+				</div>
 			</section>
 		</section>
 			
-		<footer>
-			<p class="version">
-				<a href="###">触屏版</a>
-				|
-				<a href="###">电脑版</a>
-				|
-				<a href="###">APP下载</a>
-			</p>
-			<p class="copyright">&copy;给我招财的猫 京ICP备00001号</p>
+		<footer class="now">
+			<a href="###" class="gs">收益估算</a>
+			<a href="###" class="tz">立即投资</a>
+			<a href="###" class="detailc">查看项目详情&gt;&gt;</a>
 		</footer>
 		<script src="js/zepto/zepto.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/zepto/event.js" type="text/javascript" charset="utf-8"></script>
